--- a/register.html
+++ b/register.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>Bank-PONSRIK</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -9,16 +9,18 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-
 <div class="container">
-  <h2>Vertical (basic) form</h2>
-  <form action="/api/users">
+  <h2>Coustomer Registration Form</h2>
+  <form action="http://localhost:3000/api/users">
     <div class="form-group">
       <label for="name">Name:</label>
       <input type="name" class="form-control" id="name" placeholder="Enter name" name="name">
     </div>    <div class="form-group">
-      <label for="email">Email:</label>
-      <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
+      <label for="name">Address:</label>
+      <input type="name" class="form-control" id="name" placeholder="Enter address" name="address">
+    </div>    <div class="form-group">
+      <label for="phone">Phone number:</label>
+      <input type="text" class="form-control" id="number" placeholder="Enter phone" name="phone">
     </div>    <div class="form-group">
 
     <button type="submit" class="btn btn-default">Submit</button>
