added editting option

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -65,7 +65,7 @@
             <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeToP()"><i class="fa fa-users fa-fw"></i>  Overview</a>
             <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('admin/add.html')"><i class="fa fa-plus fa-fw"></i>  Add</a>
             <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-minus fa-fw"></i>  Delete</a>
-            <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeToD()"><i class="fa fa-edit fa-fw"></i>  Edit</a>
+            <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('admin/edit.html')"><i class="fa fa-edit fa-fw"></i>  Edit</a>
             <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('admin/withdraw.html')"><i class="fa fa-sign-out fa-fw"></i>Withdraw</a>
 
             <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-history fa-fw"></i>  History</a>
