--- a/public/admin/edit.html
+++ b/public/admin/edit.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/css/form.css">
+    <style>
+        .note {
+            background: -webkit-linear-gradient(left, #ff8787, #d3ff21);
+        }
+    </style>
     <title>Bank-PONSRIK</title>
 </head>
 
@@ -34,12 +39,13 @@
     </div>
     <div class="container">
         <nav>
-            <div class="nav nav-tabs" id="nav-tab" role="tablist"><a class="nav-item nav-link active" id="nav-home-tab"
-                    data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home"
-                    aria-selected="true">Deposit</a><a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab"
-                    href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false">Account</a><a
-                    class="nav-item nav-link" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab"
-                    aria-controls="nav-contact" aria-selected="false">Customer</a></div>
+            <div class="nav nav-tabs" id="nav-tab" role="tablist">
+                <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab"
+                    aria-controls="nav-home" aria-selected="true">Deposit</a>
+                <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab"
+                    aria-controls="nav-profile" aria-selected="false">Account</a>
+                <a class="nav-item nav-link" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab"
+                    aria-controls="nav-contact" aria-selected="false"  onclick="getCustomers2()">Customer</a></div>
         </nav>
         <div class="tab-content" id="nav-tabContent">
             <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
@@ -47,7 +53,7 @@
                     <form class="cform" id="deposit-form">
                         <div class="container register-form">
                             <div class="note">
-                                <p>Create New Deposit</p>
+                                <p>Edit Deposit</p>
                             </div>
                             <div class="form-content">
                                 <div class="row">
@@ -96,7 +102,7 @@
                     <form class="cform" id="account-form">
                         <div class="container register-form">
                             <div class="note">
-                                <p>Create New Account</p>
+                                <p>Edit Account</p>
                             </div>
                             <div class="form-content">
                                 <div class="row">
@@ -123,12 +129,21 @@
             </div>
             <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">
                 <div class="bo" style="border: 1px solid #dee2e6;border-top: none;"><br>
-                    <form class="cform" id="customer-form">
+                    <form class="cform" id="customer-edit-form">
                         <div class="container register-form">
                             <div class="note">
-                                <p>Create New Customer</p>
+                                <p>Edit Customer</p>
                             </div>
                             <div class="form-content">
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="form-group">
+                                            <select class="form-control" id="customer-edit" onchange="prefillCustomerEdit()">
+                                                <option hidden selected disabled>Loading customers...</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                </div>
                                 <div class="row">
                                     <div class="col-md-6">
                                         <div class="form-group"><input class="form-control" name="name" type="text"
@@ -141,7 +156,7 @@
                                         <div class="form-group"><input class="form-control" name="address" type="text"
                                                 placeholder="Address" value="" id="address"></div>
                                         <div class="form-group"><input class="form-control" name="date" type="date"
-                                                placeholder="Account Opening Date" value="" id="date"></div>
+                                                placeholder="Account Opening Date" value="" id="ccdate"></div>
                                     </div>
                                 </div>
                                 <div class="row">
@@ -156,19 +171,13 @@
                             </div>
                         </div>
                     </form>
-                    <script>
-                        function toggle(checkboxID, toggleID) {
-                            var checkbox = document.getElementById(checkboxID);
-                            var toggle = document.getElementById(toggleID);
-                            updateToggle = checkbox.checked ? toggle.disabled = false : toggle.disabled = true;
-                        }
-                    </script>
                 </div>
             </div>
         </div>
     </div>
     <script src="/static/js/send-form.js"></script>
     <script src="/static/js/form.js"></script>
+
     <!-- jQuery first, then Popper.js, then Bootstrap JS-->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
