--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -43,7 +43,7 @@
     </div>
 
     <!-- Sidebar/menu -->
-    <nav class="w3-sidebar w3-collapse w3-white w3-animate-left" style="z-index:3;width:300px;" id="mySidebar"><br>
+    <nav class="w3-sidebar w3-collapse w3-blue w3-animate-left" style="z-index:3;width:300px;" id="mySidebar"><br>
         <div class="w3-container w3-row">
             <div class="w3-col s4">
                 <img src="https://portfolio.nhas.me/res/nha.jpg" class="w3-circle w3-margin-right" style="width:46px">
