--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -62,14 +62,16 @@
         <div class="w3-bar-block">
             <a href="#" class="w3-bar-item w3-button w3-padding-16 w3-hide-large w3-dark-grey w3-hover-black"
                 onclick="w3_close()" title="close menu"><i class="fa fa-remove fa-fw"></i>  Close Menu</a>
-            <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeToP()"><i class="fa fa-users fa-fw"></i>  Overview</a>
-            <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('admin/add.html')"><i class="fa fa-plus fa-fw"></i>  Add</a>
-            <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-minus fa-fw"></i>  Delete</a>
-            <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('admin/edit.html')"><i class="fa fa-edit fa-fw"></i>  Edit</a>
-            <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('admin/withdraw.html')"><i class="fa fa-sign-out fa-fw"></i>Withdraw</a>
+            <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeToP()"><i class="fa fa-users fa-fw"></i>    Overview</a>
+            <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('admin/add.html')"><i class="fa fa-plus fa-fw"></i>  Add</a>
+            <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('admin/edit.html')"><i class="fa fa-edit fa-fw"></i> Edit</a>
+            <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-minus fa-fw"></i>  Delete</a>
+            <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('admin/withdraw.html')"><i class="fa fa-sign-out fa-fw"></i> Withdraw</a>
+            <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('admin/email.html')"><i class="fa fa-at fa-fw"></i>  Mail</a>
+            <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('admin/sms.html')"><i class="fa fa-envelope fa-fw"></i> SMS</a>
 
-            <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-history fa-fw"></i>  History</a>
-            <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-cog fa-fw"></i>  Settings</a><br><br>
+            <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-history fa-fw"></i>    History</a>
+            <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-cog fa-fw"></i>    Settings</a><br><br>
         </div>
     </nav>
 
