--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -6,33 +6,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-    html,
-    body,
-    h1,
-    h2,
-    h3,
-    h4,
-    h5 {
-        font-family: "Raleway", sans-serif
-    }
-    .w3-quarter:hover{
-        cursor:pointer;
-        box-shadow: 0 0 9px 0px black;
-        
-    }
-</style>
-    <style>
-        input {
-            border: solid 1px darkseagreen;
-            width: 100px;
-            border-radius: 5px;
-            text-align: center;
-            /* font-weight: bold; */
-            border: 3px;
-        }
-    </style>
-
+<link rel="stylesheet" href="/static/css/main.css">
 <body class="w3-light-grey">
 
     <!-- Top container -->
@@ -62,7 +36,7 @@
         <div class="w3-bar-block">
             <a href="#" class="w3-bar-item w3-button w3-padding-16 w3-hide-large w3-dark-grey w3-hover-black"
                 onclick="w3_close()" title="close menu"><i class="fa fa-remove fa-fw"></i>  Close Menu</a>
-            <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeToP()"><i class="fa fa-users fa-fw"></i>    Overview</a>
+            <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('admin/overview.html')"><i class="fa fa-users fa-fw"></i>    Overview</a>
             <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('admin/add.html')"><i class="fa fa-plus fa-fw"></i>  Add</a>
             <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('admin/edit.html')"><i class="fa fa-edit fa-fw"></i> Edit</a>
             <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-minus fa-fw"></i>  Delete</a>
@@ -70,8 +44,8 @@
             <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('admin/email.html')"><i class="fa fa-at fa-fw"></i>  Mail</a>
             <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('admin/sms.html')"><i class="fa fa-envelope fa-fw"></i> SMS</a>
 
-            <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-history fa-fw"></i>    History</a>
-            <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-cog fa-fw"></i>    Settings</a><br><br>
+            <!-- <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-history fa-fw"></i>    History</a> -->
+            <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-cog fa-fw" onclick="changeTo('admin/settings.html')"></i>    Settings</a><br><br>
         </div>
     </nav>
 
@@ -83,102 +57,8 @@
     <!-- !PAGE CONTENT! -->
     <div class="w3-main" style="margin-left:300px;margin-top:43px;" id="content">
 
-        <!-- Header -->
-        <header class="w3-container" style="padding-top:22px">
-            <h5><b><i class="fa fa-dashboard"></i> Dashboard</b></h5>
-        </header>
-
-        <div class="w3-row-padding w3-margin-bottom">
-            <div class="w3-quarter">
-                <div class="w3-container w3-red w3-padding-16">
-                    <div class="w3-left"><i class="fa fa-money w3-xxxlarge"></i></div>
-                    <div class="w3-right">
-                        <h3 id="total">...</h3>
-                    </div>
-                    <div class="w3-clear"></div>
-                    <h4>Total</h4>
-                </div>
-            </div>
-            <div class="w3-quarter" onclick="changeTo('customers')">
-                <div class="w3-container w3-blue w3-padding-16">
-                    <div class="w3-left"><i class="fa fa-user w3-xxxlarge"></i></div>
-                    <div class="w3-right">
-                        <h3 id="customer">...</h3>
-                    </div>
-                    <div class="w3-clear"></div>
-                    <h4>Customers</h4>
-                </div>
-            </div>
-            <div class="w3-quarter" onclick="changeTo('accounts')">
-                <div class="w3-container w3-teal w3-padding-16">
-                    <div class="w3-left"><i class="fa fa-address-book w3-xxxlarge"></i></div>
-                    <div class="w3-right">
-                        <h3 id="account">...</h3>
-                    </div>
-                    <div class="w3-clear"></div>
-                    <h4>Accounts</h4>
-                </div>
-            </div>
-            <div class="w3-quarter" onclick="changeTo('deposits')">
-                <div class="w3-container w3-orange w3-text-white w3-padding-16">
-                    <div class="w3-left"><i class="fa fa-download w3-xxxlarge"></i></div>
-                    <div class="w3-right">
-                        <h3 id="deposit">...</h3>
-                    </div>
-                    <div class="w3-clear"></div>
-                    <h4>Deposits</h4>
-                </div>
-            </div>
-        </div>
-
-        <div class="w3-panel">
-            <div class="w3-row-padding" style="margin:0 -16px">
-                <div class="w3-twothird">
-                    <h5>Feeds</h5>
-                    <table class="w3-table w3-striped w3-white">
-                        <tr>
-                            <td><i class="fa fa-download w3-text-blue w3-large"></i></td>
-                            <td>Deposit added.</td>
-                            <td><i id="last-deposit-time"> ... </i></td>
-                        </tr>
-                        <tr>
-                            <td><i class="fa fa-address-book w3-text-red w3-large"></i></td>
-                            <td>Account added.</td>
-                            <td><i id="last-account-time">...</i></td>
-                        </tr>
-                        <tr>
-                            <td><i class="fa fa-user w3-text-yellow w3-large"></i></td>
-                            <td>Customer added.</td>
-                            <td><i id="last-customer-time">...</i></td>
-                        </tr>
-                        <tr>
-                            <td><i class="fa fa-credit-card w3-text-red w3-large"></i></td>
-                            <td>Account withdraw.</td>
-                            <td><i id="last-account-withdraw-time">...</i></td>
-                        </tr>
-                    </table>
-                </div>
-            </div>
-        </div>
-        <hr>
-
-        <!-- Footer -->
-        <footer class="w3-container w3-padding-16 w3-light-grey">
-            <h4>Beta</h4>
-            <p>Bank-PONSRIK</p>
-        </footer>
-
-        <!-- End page content -->
-    </div>
-    <div id="tr" class="w3-center" hidden>
-        <div class="div" style='    padding-left: 50px;margin-left: 50px'>
-
-            <br>
-            <h3 class="w3-center">List of Deposits</h3>
-        </div>
-    </div>
-
     <script src="/static/js/edit-deposit.js"></script>
+    <script>changeTo('admin/overview.html')</script>
 
 </body>
 
