fixed email issue and manymore

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -36,7 +36,9 @@
         <div class="w3-bar-block">
             <a href="#" class="w3-bar-item w3-button w3-padding-16 w3-hide-large w3-dark-grey w3-hover-black"
                 onclick="w3_close()" title="close menu"><i class="fa fa-remove fa-fw"></i>  Close Menu</a>
-            <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('admin/overview.html')"><i class="fa fa-users fa-fw"></i>    Overview</a>
+            <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('admin/overview.html')"><i class="fa fa-info-circle fa-fw"></i>    Overview</a>
+            <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('customers')"><i class="fa fa-users fa-fw"></i>    Customers</a>
+            <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('accounts')"><i class="fa fa-address-book fa-fw"></i>    Accounts</a>
             <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('admin/add.html')"><i class="fa fa-plus fa-fw"></i>  Add</a>
             <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('admin/edit.html')"><i class="fa fa-edit fa-fw"></i> Edit</a>
             <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-minus fa-fw"></i>  Delete</a>
@@ -57,7 +59,7 @@
     <!-- !PAGE CONTENT! -->
     <div class="w3-main" style="margin-left:300px;margin-top:43px;" id="content">
 
-    <script src="/static/js/edit-deposit.js"></script>
+    <script src="/static/js/main.js"></script>
     <script>changeTo('admin/overview.html')</script>
 
 </body>
