--- a/public/admin/overview.html
+++ b/public/admin/overview.html
@@ -34,7 +34,7 @@
           <h4>Total</h4>
         </div>
       </div>
-      <div class="w3-quarter" onclick="changeTo('customers')">
+      <div class="w3-quarter">
         <div class="w3-container w3-blue w3-padding-16">
           <div class="w3-left"><i class="fa fa-user w3-xxxlarge"></i></div>
           <div class="w3-right">
@@ -44,7 +44,7 @@
           <h4>Customers</h4>
         </div>
       </div>
-      <div class="w3-quarter" onclick="changeTo('accounts')">
+      <div class="w3-quarter">
         <div class="w3-container w3-teal w3-padding-16">
           <div class="w3-left">
             <i class="fa fa-address-book w3-xxxlarge"></i>
@@ -56,7 +56,7 @@
           <h4>Accounts</h4>
         </div>
       </div>
-      <div class="w3-quarter" onclick="changeTo('deposits')">
+      <div class="w3-quarter">
         <div class="w3-container w3-orange w3-text-white w3-padding-16">
           <div class="w3-left"><i class="fa fa-download w3-xxxlarge"></i></div>
           <div class="w3-right">
