--- a/public/admin/add.html
+++ b/public/admin/add.html
@@ -61,8 +61,9 @@
                                             </select></div>
                                     </div>
                                     <div class="col-md-6">
-                                        <div class="form-group"><input class="form-control" name="date" type="date"
-                                                placeholder="Deposited Date" value="" id="date"></div>
+                                        <div class="form-group"><input class="form-control" name="date"
+                                                type="datetime-local" placeholder="Deposited Date" id="deposit-date">
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="row">
@@ -159,6 +160,11 @@
                         </div>
                     </form>
                     <script>
+                        document.getElementById('deposit-date').value = new Date().toISOString().slice(0, -8);
+                        function setCurrentDate(me) {
+                            me.value = new Date().toISOString().slice(0, -8);
+                            console.log(me.value);
+                        }
                         function toggle(checkboxID, toggleID) {
                             var checkbox = document.getElementById(checkboxID);
                             var toggle = document.getElementById(toggleID);
