--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -7,13 +7,20 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="/static/css/main.css">
+
 <body class="w3-light-grey">
 
     <!-- Top container -->
     <div class="w3-bar w3-top w3-black w3-large" style="z-index:4">
+        <form class="w3-bar-item w3-right" action="/myaccount">
+            <input maxlength="6" type="search"
+                placeholder="ID or ACN" pattern="[0-9]{3}|[0-9]{6}"
+                title="Enter your 3 digit id number or 6 digit account number" name="id" required id="sid">
+            <input type="button" value="Get" style="width: 50px" onclick="changeTo('myaccount?id='+ document.getElementById('sid').value)">
+        </form>
         <button class="w3-bar-item w3-button w3-hide-large w3-hover-none w3-hover-text-light-grey"
             onclick="w3_open();"><i class="fa fa-bars"></i>  Menu</button>
-        <span class="w3-bar-item w3-right">Bank-PONSRIK</span>
+        <span class="w3-bar-item w3-center">Bank-PONSRIK</span>
     </div>
 
     <!-- Sidebar/menu -->
@@ -36,18 +43,27 @@
         <div class="w3-bar-block">
             <a href="#" class="w3-bar-item w3-button w3-padding-16 w3-hide-large w3-dark-grey w3-hover-black"
                 onclick="w3_close()" title="close menu"><i class="fa fa-remove fa-fw"></i>  Close Menu</a>
-            <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('admin/overview.html')"><i class="fa fa-info-circle fa-fw"></i>    Overview</a>
-            <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('customers')"><i class="fa fa-users fa-fw"></i>    Customers</a>
-            <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('accounts')"><i class="fa fa-address-book fa-fw"></i>    Accounts</a>
-            <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('admin/add.html')"><i class="fa fa-plus fa-fw"></i>  Add</a>
-            <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('admin/edit.html')"><i class="fa fa-edit fa-fw"></i> Edit</a>
-            <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-minus fa-fw"></i>  Delete</a>
-            <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('admin/withdraw.html')"><i class="fa fa-sign-out fa-fw"></i> Withdraw</a>
-            <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('admin/email.html')"><i class="fa fa-at fa-fw"></i>  Mail</a>
-            <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('admin/sms.html')"><i class="fa fa-envelope fa-fw"></i> SMS</a>
+            <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('admin/overview.html')"><i
+                    class="fa fa-info-circle fa-fw"></i> Overview</a>
+            <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('customers')"><i
+                    class="fa fa-users fa-fw"></i> Customers</a>
+            <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('accounts')"><i
+                    class="fa fa-address-book fa-fw"></i> Accounts</a>
+            <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('admin/add.html')"><i
+                    class="fa fa-plus fa-fw"></i> Add</a>
+            <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('admin/edit.html')"><i
+                    class="fa fa-edit fa-fw"></i> Edit</a>
+            <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-minus fa-fw"></i> Delete</a>
+            <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('admin/withdraw.html')"><i
+                    class="fa fa-sign-out fa-fw"></i> Withdraw</a>
+            <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('admin/email.html')"><i
+                    class="fa fa-at fa-fw"></i> Mail</a>
+            <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('admin/sms.html')"><i
+                    class="fa fa-envelope fa-fw"></i> SMS</a>
 
             <!-- <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-history fa-fw"></i>    History</a> -->
-            <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-cog fa-fw" onclick="changeTo('admin/settings.html')"></i>    Settings</a><br><br>
+            <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-cog fa-fw"
+                    onclick="changeTo('admin/settings.html')"></i> Settings</a><br><br>
         </div>
     </nav>
 
@@ -59,8 +75,8 @@
     <!-- !PAGE CONTENT! -->
     <div class="w3-main" style="margin-left:300px;margin-top:43px;" id="content">
 
-    <script src="/static/js/main.js"></script>
-    <script>changeTo('admin/overview.html')</script>
+        <script src="/static/js/main.js"></script>
+        <script>changeTo('admin/overview.html')</script>
 
 </body>
 
