--- a/public/admin/add.html
+++ b/public/admin/add.html
@@ -5,8 +5,7 @@
     <!-- Required meta tags-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"><!-- Bootstrap CSS-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/css/form.css">
     <title>Bank-PONSRIK</title>
 </head>
@@ -55,14 +54,15 @@
                                 <div class="row">
                                     <div class="col-md-6">
                                         <div class="form-group"><select class="form-control" name="account" id="account"
-                                                onchange="myFunction(event)">
+                                                onchange="fillName(event, 'd-by')">
                                                 <option hidden selected disabled>Loading accounts...</option>
 
                                             </select></div>
                                     </div>
                                     <div class="col-md-6">
                                         <div class="form-group"><input class="form-control" name="date"
-                                                type="datetime-local" placeholder="Deposited Date" id="deposit-date">
+                                                type="datetime-local" placeholder="Deposited Date" id="deposit-date"
+                                                ondblclick="setCurrentDateTime('deposit-date')">
                                         </div>
                                     </div>
                                 </div>
@@ -89,9 +89,6 @@
                             </div>
                         </div>
                     </form>
-                    <script>function myFunction(e) {
-                            document.getElementById("d-by").value = e.target.value.split(' - ')[0]
-                        }</script>
                 </div>
             </div>
             <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
@@ -159,28 +156,16 @@
                             </div>
                         </div>
                     </form>
-                    <script>
-                        document.getElementById('deposit-date').value = new Date().toISOString().slice(0, -8);
-                        function setCurrentDate(me) {
-                            me.value = new Date().toISOString().slice(0, -8);
-                            console.log(me.value);
-                        }
-                        function toggle(checkboxID, toggleID) {
-                            var checkbox = document.getElementById(checkboxID);
-                            var toggle = document.getElementById(toggleID);
-                            updateToggle = checkbox.checked ? toggle.disabled = false : toggle.disabled = true;
-                        }
-                    </script>
+
                 </div>
             </div>
         </div>
     </div>
     <script src="/static/js/send-form.js"></script>
     <script src="/static/js/form.js"></script>
-
     <script>
         getAccounts();
-
+        setCurrentDateTime('deposit-date')
     </script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS-->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -189,9 +174,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
 </body>
 
 </html>
