--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -24,10 +24,10 @@
 
     <!-- Sidebar/menu -->
     <nav class="w3-sidebar w3-collapse w3-blue w3-animate-left" style="z-index:3;width:300px;" id="mySidebar"><br>
-        <div class="w3-container">
+        <!-- <div class="w3-container">
             <h4>Dashboard</h4>
         </div>
-        <hr>
+        <hr> -->
         <div class="w3-bar-block">
             <a href="#" class="w3-bar-item w3-button w3-padding-16 w3-hide-large w3-dark-grey w3-hover-black"
                 onclick="w3_close()" title="close menu"><i class="fa fa-window-close fa-fw"></i>  Close Menu</a>
