fixed all known bug

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="/static/css/all.min.css">
 <link rel="stylesheet" href="/static/css/main.css">
+<link rel="stylesheet" href="/static/css/bootstrap.min.css">
 
 <body class="w3-light-grey">
 
@@ -25,12 +26,12 @@
         </div>
 
         <!-- Sidebar/menu -->
-        <nav class="w3-sidebar w3-collapse w3-blue w3-animate-left" style="z-index:3;width:300px;" id="mySidebar"><br>
-                <!-- <div class="w3-container">
-            <h4>Dashboard</h4>
-        </div>
-        <hr> -->
+        <nav class="w3-sidebar w3-collapse w3-blue w3-animate-left" style="z-index:3;width:300px;" id="mySidebar">
                 <div class="w3-bar-block">
+                        <div class="banner-container"  style="width:260px;">
+
+                                <img class="m-2 img-fluid" src="/static/images/banner-logo.png" alt="Bank-PONSRIK Banner">
+                        </div>
                         <a href="#"
                                 class="w3-bar-item w3-button w3-padding-16 w3-hide-large w3-dark-grey w3-hover-black"
                                 onclick="w3_close()" title="close menu"><i class="fa fa-window-close fa-fw"></i>  Close
