--- a/public/admin-beta/tables.html
+++ b/public/admin-beta/tables.html
@@ -354,6 +354,7 @@
                       <th>Min</th>
                       <th>Date Created</th>
                       <th>Balance</th>
+                      <th>Status</th>
                     </tr>
                   </thead>
                   <tfoot>
@@ -364,6 +365,8 @@
                       <th>Min</th>
                       <th>Date Created</th>
                       <th>Balance</th>
+                      <th>Status</th>
+
                     </tr>
                   </tfoot>
                   <tbody>
